WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32385
Tickmarks in the scrollbar are not cleared for non-main frames
https://bugs.webkit.org/show_bug.cgi?id=32385
Summary
Tickmarks in the scrollbar are not cleared for non-main frames
Avi Drissman
Reported
2009-12-10 11:20:34 PST
When executing a search, tickmarks are placed in the scrollbar for the main frame and for all embedded frames. When clearing a search, tickmarks are cleared only from the main frame. Chromium bug:
http://code.google.com/p/chromium/issues/detail?id=29362
Attachments
Patch to fix
(1.27 KB, patch)
2009-12-10 11:27 PST
,
Avi Drissman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Avi Drissman
Comment 1
2009-12-10 11:27:21 PST
Created
attachment 44628
[details]
Patch to fix
WebKit Review Bot
Comment 2
2009-12-10 11:30:44 PST
style-queue ran check-webkit-style on
attachment 44628
[details]
without any errors.
Alexey Proskuryakov
Comment 3
2009-12-10 19:56:49 PST
Platform is for bugs in WebCore/platform, moving to WebKit Misc.
WebKit Commit Bot
Comment 4
2009-12-11 10:16:21 PST
Comment on
attachment 44628
[details]
Patch to fix Clearing flags on attachment: 44628 Committed
r52004
: <
http://trac.webkit.org/changeset/52004
>
WebKit Commit Bot
Comment 5
2009-12-11 10:16:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug