2009-12-11  Avi Drissman  <avi@chromium.org>

Reviewed by Darin Fisher.

        Tickmarks in the scrollbar are not cleared for non-main frames
        https://bugs.webkit.org/show_bug.cgi?id=32385

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::stopFinding):

git-svn-id: svn://svn.chromium.org/blink/trunk@52004 bbb929c8-8fbe-4397-9dbb-9b2b20218538